fix : ltr horizontal scroll for codeblocks

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -82,3 +82,10 @@
 	--tw-prose-quotes: var(--color-quote);
 	--tw-prose-th-borders: #666;
 }
+
+
+@layer utilities {
+	.expressive-code {
+		direction: ltr;
+	}
+}
